data/derived/fa15/progs/unify/prog3805.ml.out
Characters 419-426:
  | Circ	(circ1,circ2)       -> eval(circ1)**2+eval(circ2)**2
                                    ^^^^^^^
Error: This expression has type expr but an expression was expected of type
         expr * float * float
